## Process this file with automake to produce Makefile.in

## Subdirectories list
SUBDIRS = src

## Default flags to run aclocal
ACLOCAL_AMFLAGS = -I project

                                                                                                                                                             