#
#       Copyright (c) 2004 on behalf of the EU EGEE Project:
#       The European Organization for Nuclear Research (CERN),
#       Istituto Nazionale di Fisica Nucleare (INFN), Italy
#       Datamat Spa, Italy
#       Centre National de la Recherche Scientifique (CNRS), France
#       CS Systeme d'Information (CSSI), France
#       Royal Institute of Technology, Center for Parallel Computers (KTH-PDC), Sweden
#       Universiteit van Amsterdam (UvA), Netherlands
#       University of Helsinki (UH.HIP), Finland
#       University of Bergen (UiB), Norway
#       Council for the Central Laboratory of the Research Councils (CCLRC), United Kingdom
#
#       Authors: Elisabetta Ronchieri <elisabetta.ronchieri@cnaf.infn.it>
#       Version info: $Id: Makefile.am,v 1.1.28.2 2011/06/24 09:29:07 pandreet Exp $
#       Release: $Name: glite-wms-brokerinfo-access_branch_3_4 $
#
#       Revision history:
#       $Log: Makefile.am,v $
#       Revision 1.1.28.2  2011/06/24 09:29:07  pandreet
#       Packaging glite-brokerinfo man page
#
#       Revision 1.1.28.1  2011/06/22 14:51:13  pandreet
#       New packaging style for brokerinfo access
#
#       Revision 1.1  2004/12/01 09:17:27  mezzadri
#       added new component
#
#       Revision 1.2  2004/10/08 13:46:08  mezzadri
#       added managing of LICENSE file
#
#       Revision 1.1  2004/08/16 12:53:47  eronchie
#       Start adding new component
#       WARNING: work in progress
#
#
#
                                                                                                                                                             
## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

## Process this file with automake to produce Makefile.in

EXTRA_DIST = LICENSE

docdir = $(datadir)/doc/@PACKAGE@-@PVER@
doc_DATA = LICENSE

## Subdirectories list
SUBDIRS = src doc

## Default flags to run aclocal
ACLOCAL_AMFLAGS = -I project

include project/doxygen/aminclude.am

stage:
	@set fnord $(MAKEFLAGS); amf=$$2; \
   dot_seen=no; \
        target="install"; \
   prefix_arg=@prefix@; \
        list='$(SUBDIRS)'; for subdir in $$list; do \
          echo "Making $$target $$prefix_arg in $$subdir"; \
          if test "$$subdir" = "."; then \
            dot_seen=yes; \
            local_target="$$target-am"; \
          else \
            local_target="$$target"; \
          fi; \
          (cd $$subdir && $(MAKE) $(AM_MAKEFLAGS) $$local_target $$prefix_arg) \
           || case "$$amf" in *=*) exit 1;; *k*) fail=yes;; *) exit 1;; esac; \
        done; \
        if test "$$dot_seen" = "no"; then \
          $(MAKE) $(AM_MAKEFLAGS) "$$target-am" $$prefix_arg || exit 1; \
        fi; test -z "$$fail"

distsrc: dist
	mv $(distdir).tar.gz $(DISTTAR)/$(distdir)_src.tar.gz

distbin:
	@set fnord $(MAKEFLAGS); amf=$$2; \
        dot_seen=no; \
        target="install"; \
   tmpdistbin="$(WORKDIR)/dist_bin"; \
        prefix_arg="prefix=$$tmpdistbin"; \
        list='$(SUBDIRS)'; for subdir in $$list; do \
          echo "Making $$target $$prefix_arg in $$subdir"; \
          if test "$$subdir" = "."; then \
            dot_seen=yes; \
            local_target="$$target-am"; \
          else \
            local_target="$$target"; \
          fi; \
          (cd $$subdir && $(MAKE) $(AM_MAKEFLAGS) $$local_target $$prefix_arg) \
           || case "$$amf" in *=*) exit 1;; *k*) fail=yes;; *) exit 1;; esac; \
        done; \
        if test "$$dot_seen" = "no"; then \
          $(MAKE) $(AM_MAKEFLAGS) "$$target-am" $$prefix_arg || exit 1; \
        fi; test -z "$$fail"; \
   pushd $$tmpdistbin; \
   $(AMTAR) -zcf $(DISTTAR)/$(distdir)_bin.tar.gz .; \
   popd; \
   rm -rf $$tmpdistbin
